# neural_nets

./: README.md  best_model.pth  cars_model.py  config.py  hidden_layer_test.py  knowledge_test.py  neural_network_training.py  pyproject.toml  rich_logger.py  simple_nn.py  simple_nn_class.py  takeaway.md  testing.py  torch_model.py
lungCancer/: lungModel.py  preprocess.py
lungCancer/preprocessing/: constants.py  preprocess_functions.py  randomforest.py
lungCancer/training/: train.py  trainer.py
